--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   },
   "dependencies": {
     "@apollo/composition": "^2.1.1",
+    "@apollo/server": "^4.0.0-alpha.10",
+    "@apollo/subgraph": "^2.1.1",
+    "@graphql-tools/mock": "^8.7.6",
+    "@types/js-yaml": "^4.0.5",
     "execa": "^6.1.0",
     "graphql": "^16.6.0",
     "js-yaml": "^4.1.0",
+    "typescript": "^4.8.3",
     "undici": "^5.10.0"
   }
 }
