--- a/package.json
+++ b/package.json
@@ -1,22 +1,11 @@
 {
-  "name": "router-manager",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "type": "module",
+  "private": true,
+  "workspaces": [
+    "example/**/*",
+    "packages/*"
+  ],
   "scripts": {
-    "postinstall": "./install.sh"
-  },
-  "dependencies": {
-    "@apollo/composition": "^2.1.1",
-    "@apollo/server": "^4.0.0-alpha.10",
-    "@apollo/subgraph": "^2.1.1",
-    "@graphql-tools/mock": "^8.7.6",
-    "@types/js-yaml": "^4.0.5",
-    "execa": "^6.1.0",
-    "graphql": "^16.6.0",
-    "js-yaml": "^4.1.0",
-    "typescript": "^4.8.3",
-    "undici": "^5.10.0"
+    "publish": "./scripts/publish.sh",
+    "build:router": "./scripts/build_and_install_router.sh"
   }
 }
